k8s_yamls/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: nginx
  name: nginx-server
      
  
spec:
  replicas: 1
  selector:
    matchLabels:
      service: nginx-server

  template:
    metadata:
      labels:
        service: nginx-server

    spec:
      containers:
      - image: nginxdemos/hello
        name: nginx-container
        volumeMounts:
          - name: pvc-volume
            mountPath: /cache
      volumes:
        - name: pvc-volume
          persistentVolumeClaim:
            claimName: my-volume
