k8s_yamls/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx

spec:
  containers:
    - image: nginx
      name: nginx-server
  restartPolicy: Always
