k8s_yamls/nginx-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port
spec:
  type: NodePort
  selector:
    service: nginx-server   # must match Deployment pod labels
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080       # you can choose a node port (30000-32767)
