k8s_yamls/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
