k8s_yamls/nodeport.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-node-port
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30000

  selector:
    service: nginx-server
  type: NodePort
